--- a/src/app/chartdata/chartdata.component.html
+++ b/src/app/chartdata/chartdata.component.html
@@ -1,2 +1,12 @@
  
-<h2>Chartdata List</h2>
+<h2>App-Chartdata List2</h2>
+<google-chart
+  title="Resizing Chart"
+  style="width: 100%;"
+  type="PieChart"
+  [data]="bardata"
+  [columns]="chart.columnNames"
+  [options]="chart.options"
+  [dynamicResize]="true"
+>
+</google-chart>
