--- a/src/app/chartdata/chartdata.component.html
+++ b/src/app/chartdata/chartdata.component.html
@@ -1,9 +1,8 @@
- 
 <h2>App-Chartdata List2</h2>
 <google-chart
   title="Resizing Chart"
-  style="width: 100%;"
-  type="PieChart"
+  style="width: 100%"
+  type="BarChart"
   [data]="bardata"
   [columns]="chart.columnNames"
   [options]="chart.options"
