--- a/src/app/rainlist/rainlist.component.html
+++ b/src/app/rainlist/rainlist.component.html
@@ -1,18 +1,18 @@
 <h1>rainlist works!</h1>
-<h1>{{errorMsg}}</h1>
+<h1>{{ errorMsg }}</h1>
+<h2>{{ Counter }}</h2>
 <!--<ul *ngFor="let rain of raindata">  
      <li>{{rain.Year}} , {{rain.Glob}}</li>
 </ul>
 type="LineChart"
 -->
-<google-chart 
-[type]="chart.type" 
-[title]="chart.title" 
-style="width: 200%;"
-[data]=bardata 
-[columns]="chart.columnNames"
-[options]="chart.options"
-[dynamicResize]="true"
+<google-chart
+  [type]="chart.type"
+  [title]="chart.title"
+  style="width: 150%"
+  [data]="bardata"
+  [columns]="chart.columnNames"
+  [options]="chart.options"
+  [dynamicResize]="true"
 >
 </google-chart>
-
